--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ main{
 
 .form-btn--sec{
     background: var(--ligth-blue);
-    color: var(--dark-blue)   
+    color: var(--dark-green)   
 }
 
 button:hover{
